# Clicound

./: .gitignore  README.md  clicound.py  config.json  generate_default_sounds.py
.limcode/design/: clicound-cc-native-windows-重写设计.md
native/: CMakeLists.txt  config.json
native/res/: app.manifest  resource.h  resource.rc
native/src/: audio.cpp  audio.h  config.cpp  config.h  dialog.cpp  dialog.h  hook.cpp  hook.h  main.cpp  tray.cpp  tray.h
